# leanfe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  yoco_sparse_science.md
.github/workflows/: publish-docs.yml  test.yml
docs/: _common.R  _quarto.yml  index.qmd  requirements.txt
docs/benchmarks/: cluster-se.qmd  comprehensive.qmd  methodology.qmd  overview.qmd
docs/guides/: large-datasets.qmd
docs/reference/: python.qmd  r.qmd
docs/tests/: test_website_properties.py
docs/tutorials/: basic-usage.qmd  did.qmd  factor-variables.qmd  iv-regression.qmd  standard-errors.qmd
python/: README.md  pyproject.toml
python/leanfe/: __init__.py  common.py  compress.py  duckdb_impl.py  leanfe.py  polars_impl.py  result.py  std_errors.py
python/tests/: .~lock.benchmark_results.csv#  benchmark_results.csv  benchmark_results132132.csv  benchmark_results2.csv  benchmark_results3.csv  benchmark_results_1231321.csv  create_data.py  dbreg.R  dbreg.Rmd  jbh_test.py  reg_test.py  test_basic.py  test_continuous_interactions.py  test_continuous_warning.py  test_factor_variables.py  test_interactions.py  test_multiple_treatments.py  test_reference_category.py  test_sparse_dense_equivalence.py  test_weighted.py  test_yoco_cluster_se.py  utils.py
r/: DESCRIPTION  README.md
r/R/: common.R  compress.R  duckdb.R  leanfe.R  polars.R
r/tests/: test_basic.R  test_continuous_interactions.R  test_continuous_warning.R  test_factor_variables.R  test_interactions.R  test_multiple_treatments.R  test_reference_category.R  test_sparse_dense_equivalence.R  test_weighted.R  test_yoco_cluster_se.R
tests/: test_cross_language_equivalence.py
