[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leanfe"
version = "1.0.0"
description = "Lean, fast fixed effects regression using Polars and DuckDB"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Diego Gentile Passaro", email = "diegogentilepassaro@gmail.com"}
]
keywords = ["econometrics", "fixed-effects", "regression", "polars", "duckdb", "difference-in-differences", "panel-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "polars>=0.19.0",
    "numpy>=1.20.0",
    "duckdb>=0.9.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/diegogentilepassaro/leanfe"
Documentation = "https://github.com/diegogentilepassaro/leanfe#readme"
Repository = "https://github.com/diegogentilepassaro/leanfe"
Issues = "https://github.com/diegogentilepassaro/leanfe/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["leanfe*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
