[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leanfe"
version = "1.0.0"
description = "Lean, fast fixed effects regression using Polars and DuckDB"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Diego Gentile Passaro", email = "diegogentilepassaro@gmail.com"}
]
keywords = ["econometrics", "fixed-effects", "regression", "polars", "duckdb", "difference-in-differences", "panel-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "polars>=0.19.0",
    "numpy==2.2",
    "duckdb>=0.9.0",
    "scipy>=1.7.0",
    "pyarrow>=12.0.0",
    "jupyter>=1.1.1",
    "memory-profiler>=0.61.0",
    "pyfixest>=0.40.0",
    "numba>=0.63.1",
    "pandas>=2.3.3",
    "formulaic>=1.2.1",
    "joblib>=1.5.3",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "great-tables>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/diegogentilepassaro/leanfe"
Documentation = "https://github.com/diegogentilepassaro/leanfe#readme"
Repository = "https://github.com/diegogentilepassaro/leanfe"
Issues = "https://github.com/diegogentilepassaro/leanfe/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["leanfe*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
